# iterm-player

./: .gitignore  Cargo.toml  README.md  config.example.json  index.js  package-lock.json  package.json
archive/: README.md  index.js  musickit.js  package-lock.json
iterm2/: iterm_player_statusbar.py
src/: main.rs
