[package]
name = "iterm-player"
version = "0.2.4"
edition = "2024"

[dependencies]
crossterm = "0.28"
gstreamer = "0.23"
gstreamer-app = "0.23"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustfft = "6.4"
serde_json = "1.0"
souvlaki = "0.8"
cocoa = "0.24"
objc = "0.2"
